--- a/index.html
+++ b/index.html
@@ -4,24 +4,31 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Para o amor da minha vida</title>
+    <link rel="stylesheet" href="estilos/style.css">
 </head>
 <body>
     <h1>Linda, essa é para você!</h1>
     <h2>Separei esse site em varios topicos</h2>
     <div>
         <ul>1- Você é linda</ul>
-        <ul>2- Seu jeito comigo</ul>
+        <ul>2- Seu jeito</ul>
         <ul>3- Tudo que eu acho sobre você</ul>
         <ul>4- Meus planos com você</ul>
     </div>
-    <p>1-Primeiro Vamos começar falando e mostrando como você é LINDA, escolhi três fotos para demonstrar isso!</p>
-    <img src="Imagens/Meuamor2.jpg" alt="Esses olhos">
+    <h3>1- Primeiro vamos começar falando e mostrando como você é LINDA, escolhi três fotos para demonstrar isso!</h3>
+    <img id="vi" src="Imagens/Meuamor2.jpg" alt="Esses olhos">
     <p>Olha que perfeição essa menina é, esses olhos verdes, essa boca, esse cabelo, TUDO EM VOCÊ é maravilhoso.</p>
     <p>Vamos para outra foto sua so para vermos um pequeno detalhe</p>
-    <img src="Imagens/Meuamor3.jpg" alt="Tudo para mim">
+    <img id="vi" src="Imagens/Meuamor3.jpg" alt="Tudo para mim">
     <p>Quando me perguntam o que é uma foto linda eu mostro essa, esse sorriso é com certeza uma das sete maravilhas do mundo. E detalhe, tenho esse sorriso para mim todo dia, quando você me pergunta porque faço gracinhas todos os dias, é por conta disso. Ver voce rindo, com toda certeza desse mundo é o meu momento preferido.</p>
     <p>Para finalizar essa primeira parte do site, vou colocar uma foto em que voce estava muito feliz, a inauguração da sua lojinha de pratas, a acessorios vibes.</p>
-    <img src="Imagens/Meuamor4.jpg" alt="Uma linda">
+    <img id="vi" src="Imagens/Meuamor4.jpg" alt="Uma linda">
     <p>Eu amo essa foto por um motivo, você estava muito feliz! Postando fotos desse brinco e desse cordão para postar na sua lojinha, que graças a Deus vendeu tudo, mas infelizmente você deu uma desanimada. Você me disse que esta empenhada a voltar e voce sabe que tem meu apoio total, o mundo é nosso meu amor!!!</p>
+    <h3>2- Agora vamos falar um pouco do seu jeito.</h3>
+    <p>Desta vez cou colocar apenas duas fotos e falar um pouco de voce.</p>
+    <img id="vi" src="Imagens/vida 1.jpg" alt="amore">
+    <img id="vi2" src="Imagens/vida 2.jpg" alt="vida">
+    <p>Essas duas fotos eu tambem sou apaixonado, mas o intuito dessa parte do site é falar do jeito. Então, o que eu mais gosto em você disparado é o tamanho do seu coração, pois você sempre faz de tudo para ajudar as pessoas ao seu redor. Sempre que estou triste você faz de tudo para me ver feliz novamente, sempre faz as coisas que eu gosto, e sempre esta afim de fazer algo novo.</p>
+    <h3>3- Nessa parte vou falar tudo que eu acho sobre você!</h3>
 </body>
 </html>
