atualização do meu site

--- a/404.html
+++ b/404.html
@@ -27,8 +27,9 @@
     <h3>2- Agora vamos falar um pouco do seu jeito.</h3>
     <p>Desta vez cou colocar apenas duas fotos e falar um pouco de voce.</p>
     <img id="vi" src="Imagens/vida 1.jpg" alt="amore">
-    <img id="vi2" src="Imagens/vida 2.jpg" alt="vida">
-    <p>Essas duas fotos eu tambem sou apaixonado, mas o intuito dessa parte do site é falar do jeito. Então, o que eu mais gosto em você disparado é o tamanho do seu coração, pois você sempre faz de tudo para ajudar as pessoas ao seu redor. Sempre que estou triste você faz de tudo para me ver feliz novamente, sempre faz as coisas que eu gosto, e sempre esta afim de fazer algo novo.</p>
+    <p>Essa foto eu tambem sou apaixonado, mas o intuito dessa parte do site é falar do jeito. Então, o que eu mais gosto em você disparado é o tamanho do seu coração, pois você sempre faz de tudo para ajudar as pessoas ao seu redor. Sempre que estou triste você faz de tudo para me ver feliz novamente, sempre faz as coisas que eu gosto, e sempre esta afim de fazer algo novo.</p>
+    <img id="vi" src="Imagens/vida 2.jpg" alt="vida">
+    <p>Quis colocar mais uma foto so para mostrar a todos o quão sou apaixonado por você e flar mais um pouco bem, uma coisa que amo é quando você fica empenhada para fazer as coisas, quando quer algo ninguem tira da sua cabeça </p>
     <h3>3- Nessa parte vou falar tudo que eu acho sobre você!</h3>
 </body>
 </html>
