--- a/404.html
+++ b/404.html
@@ -29,7 +29,21 @@
     <img id="vi" src="Imagens/vida 1.jpg" alt="amore">
     <p>Essa foto eu tambem sou apaixonado, mas o intuito dessa parte do site é falar do jeito. Então, o que eu mais gosto em você disparado é o tamanho do seu coração, pois você sempre faz de tudo para ajudar as pessoas ao seu redor. Sempre que estou triste você faz de tudo para me ver feliz novamente, sempre faz as coisas que eu gosto, e sempre esta afim de fazer algo novo.</p>
     <img id="vi" src="Imagens/vida 2.jpg" alt="vida">
-    <p>Quis colocar mais uma foto so para mostrar a todos o quão sou apaixonado por você e flar mais um pouco bem, uma coisa que amo é quando você fica empenhada para fazer as coisas, quando quer algo ninguem tira da sua cabeça </p>
+    <p>Quis colocar mais uma foto so para mostrar a todos o quão sou apaixonado por você e falar mais um pouco bem, uma coisa que amo é quando você fica empenhada para fazer as coisas, quando quer algo ninguem tira da sua cabeça </p>
     <h3>3- Nessa parte vou falar tudo que eu acho sobre você!</h3>
+    <p>E para falar tudo sobre você eu vou postar fotos nossas dessa vez, e vou postar uma foto a cada ano que estamos juntos.</p>
+  <img src="Imagens/2019v.jpg" alt="2019">
+  <p>Essa foi a nossa primeira foto, em 2019, estávamos apenas nos conhecemos. Ai ja percebi que você seria minha namorada!</p>
+  <img src="Imagens/2020v.jpg" alt="2020">
+  <p>Essa foto foi em 2020, uma das minhas fotos preferidas.</p>
+  <img src="Imagens/2021v.jpg" alt="2021">
+  <p>Nessa foto ja tinhamos 2 anos de namoro, em 2021. Você estava maravilhosa.</p>
+  <img src="Imagens/2022v.jpg" alt="2022">
+  <p>Essa foto foi em uma cachoeira, em 2022. Amo me divertir e sair com você!</p>
+  <img src="Imagens/2023v.jpg" alt="2023">
+  <p>Uma das minhas fotos preferidas da vida, em 2023, numa festa e esse dia foi perfeito, um dos meus passatempos preferidos.</p>
+  <img src="Imagens/2024v.jpg" alt="2024">
+  <p>Nossa ultima foto junta ate o dia de hoje, uma foto perfeita que so te realça, esse olho mexe comigo demais!</p>
+  <p>Agora vou falar de fato tudo que acho sobre você, tudo que eu mais amo nessa vida e você sabe que falo isso todo dia é o seu jeitinho. Seu jeito doce e calmo que é ao contrario de mim e isso faz a gente dar certo. Amor, hoje estamos noivos e serio, eu sou completamente apaixonado por você e no proximo tópico vou falar meus planos com você!</p>
 </body>
 </html>
