--- a/pt2.html
+++ b/pt2.html
@@ -3,16 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Parte 2 do site</title>
+    <title>Te amo</title>
     <link rel="stylesheet" href="estilos/pt2.css">
 </head>
 <body>
     <h3>3- Por ultimo e não menos importante, agora vou falar todos meus planos com você.</h3>
     <p>Antes de falar, vou postar duas imagens e escrever um pouquinho sobre elas, de fatos elas são as minhas fotos favoritas</p>
-   <img src="Imagens/minhavidas.jpg" alt="familia">
+   <img id="vi2" src="Imagens/minhavidas.jpg" alt="familia">
    <p>Essa era a minha foto preferida da vida, nossa família. VocÊ não tem noção o quanto eu amo vocÊ, o quanto eu amo a Marilinha, e eu estou disposto de fazer tudo nessa vida por vocês duas amor. Você é íncrivel!</p>
-   <img src="Imagens/noiva1.jpg" alt="noiva">
-   <p>Antes a outra que era a minha foto preferida, agora essa é a mais. Antigamente brincava de te chamar de noiva, agora é verda, enfim somos noivos. E foi a melhor escolha da minha vida, dividir a casa com você e te ver todos os dias é a coisa preferida da minha vida inteira.</p>
-   <p>Enfim, agora vou falar todos meu planos com vocÊ, e se prepara, que é longo!</p>
+   <img id="vi2" src="Imagens/noiva1.jpg" alt="noiva">
+   <p>Antes a outra que era a minha foto preferida, agora essa é a mais. Antigamente brincava de te chamar de noiva, agora é verda, enfim somos noivos. E foi a melhor escolha da minha vida, dividir a casa com você e te ver todos os dias é a coisa preferida da minha vida inteira. Enfim, agora vou falar todos meu planos com vocÊ, e se prepara, que é longo!</p>
+   <p>Amor, como você sabe tenho um milhão de sonhos com você, um deles eu ja consegui realizar que foi virar seu noivo. O próximo obviamente é casar contigo, e isso esta muito perto de acontecer. Ter dois filhos talvez demore um pouquinho, mas com certeza o Bento e a Cecília vai vim com muita saúde para alegrar a nossa vida. <br>
+    Agora vou falar de sonhos que vai se realizar recentemente, um deles é viajar, e isso obviamente vai acontecer muito na nossa vida ainda. Eu sei que ainda não fizemos muitas viagens, mas pode ter certeza que ainda vamos para ibitipoca (que esta muito perto de acontecer), Noronha, Jerí, e em varios lugares do Brasil e no mundo, mas onde é o meu foco principal em te levar é em Miami.
+   </p>
 </body>
 </html>
