--- a/pt2.html
+++ b/pt2.html
@@ -14,7 +14,8 @@
    <img id="vi2" src="Imagens/noiva1.jpg" alt="noiva">
    <p>Antes a outra que era a minha foto preferida, agora essa é a mais. Antigamente brincava de te chamar de noiva, agora é verda, enfim somos noivos. E foi a melhor escolha da minha vida, dividir a casa com você e te ver todos os dias é a coisa preferida da minha vida inteira. Enfim, agora vou falar todos meu planos com vocÊ, e se prepara, que é longo!</p>
    <p>Amor, como você sabe tenho um milhão de sonhos com você, um deles eu ja consegui realizar que foi virar seu noivo. O próximo obviamente é casar contigo, e isso esta muito perto de acontecer. Ter dois filhos talvez demore um pouquinho, mas com certeza o Bento e a Cecília vai vim com muita saúde para alegrar a nossa vida. <br>
-    Agora vou falar de sonhos que vai se realizar recentemente, um deles é viajar, e isso obviamente vai acontecer muito na nossa vida ainda. Eu sei que ainda não fizemos muitas viagens, mas pode ter certeza que ainda vamos para ibitipoca (que esta muito perto de acontecer), Noronha, Jerí, e em varios lugares do Brasil e no mundo, mas onde é o meu foco principal em te levar é em Miami.
+    Agora vou falar de sonhos que vai se realizar recentemente, um deles é viajar, e isso obviamente vai acontecer muito na nossa vida ainda. Eu sei que ainda não fizemos muitas viagens, mas pode ter certeza que ainda vamos para ibitipoca (que esta muito perto de acontecer), Noronha, Jerí, e em varios lugares do Brasil e no mundo, mas onde é o meu foco principal em te levar é em Miami. <br>
+    te amo
    </p>
 </body>
 </html>
