--- a/404.html
+++ b/404.html
@@ -46,5 +46,10 @@
   <p>Nossa ultima foto junta ate o dia de hoje, uma foto perfeita que so te realça, esse olho mexe comigo demais!</p>
   <p>Agora vou falar de fato tudo que acho sobre você, tudo que eu mais amo nessa vida e você sabe que falo isso todo dia é o seu jeitinho. Seu jeito doce e calmo que é ao contrario de mim e isso faz a gente dar certo. Amor, hoje estamos noivos e serio, eu sou completamente apaixonado por você e no proximo tópico vou falar meus planos com você!</p>
   <a href="pt2.html">Clique aqui para você ver a melhor parte do site!</a>
+
+  <script>
+    var nome = window.prompt('Qual o seu nome')
+    window.alert('É um grande prazer em te conhecer, ' + nome )
+  </script>
 </body>
 </html>
